--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-               Universal Shell Programming Laboratory
+﻿               Universal Shell Programming Laboratory
                           info@usp-lab.com
                     Wed Aug  1 14:10:11 JST 2012
 
@@ -31,7 +31,7 @@ Open usp Tukubaiのサポート(有償)、商用版Tukubaiに関するお問
 ===========
 
 ダウンロードページ
-  https:///uec.usp-lab.com/tukubai_download
+  https://uec.usp-lab.com/tukubai_download
 
 GitHub
   https://github.com/usp-engineers-community/Open-usp-Tukubai
